# devnote

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release-windows.yml
scripts/: gen-icons.cjs  post-build-macos.sh
src/: app.css  app.ts
src-tauri/: Cargo.toml  Info.plist  custom-info.plist  entitlements-dev.plist  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macos_events.rs  main.rs
src-tauri/src/commands/: file.rs  mod.rs  recovery.rs  window.rs
src-tauri/src/state/: mod.rs  recent.rs  recovery.rs
src/lib/codemirror/: extensions.ts  setup.ts  theme.ts
src/lib/components/: ConfirmDialog.svelte  ContextMenu.svelte  Editor.svelte  FindReplace.svelte  StatusBar.svelte  Tab.svelte  TabBar.svelte  TitleBar.svelte
src/lib/editor/: actions.test.ts
src/lib/stores/: settings.svelte.ts  tabs.svelte.test.ts  tabs.svelte.ts
src/lib/tauri/: ipc.test.ts  ipc.ts
src/lib/utils/: detect-lang.test.ts  detect-lang.ts  ensure-ext.test.ts  error.test.ts  format-path.ts
src/routes/: +page.svelte
